@@ -1,3 +1,7 @@
+2008-02-21 David Moore  <dcm@acm.org>
+	* SVN 543: Correct the order of operations at the start of juju
+	           capture so that any manual channel settings are preserved.
+
 2008-02-12 Damien Douxchamps http://damien.douxchamps.net/
         * SVN 542: Return an error if the camera enumeration fails (thanks to
 	           Jasper Leemans)
